# taitan

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
taitan/: Cargo.toml
taitan-aliyun-oss/: Cargo.toml
taitan-aliyun-oss/src/: aliyun.rs  client.rs  endpoint.rs  entry.rs  header.rs  lib.rs  request.rs  sign.rs  utils.rs
taitan-aliyun-oss/tests/: assume_role.rs
taitan-test/: Cargo.toml
taitan-test/src/: lib.rs  oneshot.rs  response.rs
taitan/src/: application.rs  config.rs  const_val.rs  daemonize.rs  error.rs  file.rs  lib.rs  logger.rs  response.rs  result.rs  server_conf.rs  spa.rs  state.rs
taitan/src/middleware/: mod.rs  multiplex.rs
taitan/src/middleware/grpc/: mod.rs  nest.rs  rest_grpc.rs  status.rs
taitan/src/middleware/jwt/: authorizator.rs  blacklist.rs  claims.rs  error.rs  keys.rs  mod.rs  token_parser.rs
taitan/tests/: app.rs  application.toml  configuration_test.rs  response.rs
taitan/tests/common/: mod.rs
