[workspace]
members = [
  "taitan",
  "taitan-aliyun-oss"
]

default-members = [
  "taitan"
]

[workspace.package]
version = "0.1.1"
rust-version = "1.75.0"

[workspace.dependencies]
axum = {version = "0.7.4", features = ["multipart"]}
axum-server = {version = "0.6.0", features = ["tls-rustls"]}
tokio = {version = "1.35.1", features = ["full"]}
tokio-util = {version = "0.7", features = ["io"]}
reqwest = {version = "0.11", features = ["json"]}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
derive_builder = {version = "0.13.0"}
clap = {version = "4.4.18"}

hmac = {version = "0.12.1"}
sha2 = {version = "0.10.8"}
base64 = {version = "0.13"}
hex = {version = "0.4.3"}
case = {version = "1.0.0"}

serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

futures = {version = "0.3"}

thiserror = {version = "1.0.56"}
tracing = {version = "0.1"}
chrono = {version = "0.4.2"}
jsonwebtoken = { version = "9.2.0"}
luna-orm = {version = "0.3.6"}
