[package]
name = "taitan"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The Next Generation of Web Framework"
homepage = "https://github.com/thegenius/taitan"
version = {workspace = true}
rust-version = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {workspace = true}
axum-server = {version = "0.6.0", features = ["tls-rustls"]}
axum-extra = {version = "0.9.2", features = ["typed-header"]}
hyper = {workspace = true}
bytes = "1.2"
http = "1"
http-body = "1"
tonic = { version = "0.11.0" }


tokio = {version = "1.35.1", features = ["full"]}
tokio-util = {version = "0.7", features = ["io"]}
http-body-util = {version = "0.1.0"}
reqwest = {version = "0.11", features = ["json"]}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
headers = {version = "0.4.0"}
tempfile = {workspace = true}

clap = {version = "4.4.18"}
once_cell = {version = "1.19.0"}
rand = {version = "0.8.5"}
uuid = {version = "1.8.0", features = ["v4", "fast-rng",   "macro-diagnostics", ]}

serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

futures = {version = "0.3"}

thiserror = {version = "1.0.56"}
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3.18"}
chrono = {version = "0.4.2"}
jsonwebtoken = { version = "9.2.0"}
luna-orm = {version = "0.3.6"}
daemonize = "0.5.0"



[dev-dependencies]
taitan-test = {version = "0.1.7"}
